--- a/app/src/Sidebar/Buy/buy.scss
+++ b/app/src/Sidebar/Buy/buy.scss
@@ -157,6 +157,10 @@
       margin: 0 0 0 auto;
       outline: 0;
 
+      @media #{$tablet-small-max} {
+        width: 60%;
+      }
+
       &::-webkit-inner-spin-button,
       &::-webkit-outer-spin-button {
         -webkit-appearance: none;
